<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name_hint"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="@color/gray_medium" />

    <EditText
        android:id="@+id/categoryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/category_hint"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="@color/gray_medium" />

    <EditText
        android:id="@+id/quantityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/quantity_hint"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="@color/gray_medium" />

</LinearLayout>
